Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32957

Running several applications with XCB tends to let them hang

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 5.2.0
    • GUI: Window management
    • None
    • Linux/XCB
    • ac5c64fccd6d491ee3b3a3f54460ed3464d714fc

      Start an example several times (eg widgets/dialogs/standarddialogs) and closing one instance tends to hang all of the Qt applications and some other things running on X depending on the machine's configuration.
      This is independent of window manager (reproduced with Unity and KWin and OpenBox).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            psychon Uli Schlachter
            frederik Frederik Gladhorn
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes